# Caskell

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/factorial/: CMakeLists.txt  factorial.cpp
examples/knapsack/: CMakeLists.txt  knapsack.cpp
examples/n_queens/: CMakeLists.txt  queens.cpp
examples/sqrt/: CMakeLists.txt  main.cpp
examples/symbolic_diff/: CMakeLists.txt  symbolic_diff.cpp
examples/variant_match/: CMakeLists.txt  variant_match.cpp
include/: caskell.hpp  common_monads.hpp  curry.hpp  lazystream.hpp  maybe.hpp  pattern_matching.hpp  stream.hpp  typeclass.hpp  utils.hpp  variant.hpp
src/: caskell.cpp
tests/: CMakeLists.txt  caskell_test.cpp  operator_test.cpp  typeclass_test.cpp
